# djangoadmin-tomselect-filter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example_project/: admin.py  apps.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
example_project/fixtures/: demo.json
example_project/migrations/: 0001_initial.py  0002_accountingyear_inventory_accounting_year_and_more.py
example_project/templates/admin/: base.html
test_app/: admin.py  apps.py  models.py
test_app/migrations/: 0001_initial.py
tomselect_filter/: apps.py  filters.py  urls.py  views.py
tomselect_filter/locale/de/LC_MESSAGES/: django.po
tomselect_filter/locale/es/LC_MESSAGES/: django.po
tomselect_filter/locale/fr/LC_MESSAGES/: django.po
tomselect_filter/locale/it/LC_MESSAGES/: django.po
tomselect_filter/locale/ru/LC_MESSAGES/: django.po
tomselect_filter/locale/zh/LC_MESSAGES/: django.po
tomselect_filter/static/js/: tomselect_filter.js
tomselect_filter/templates/admin/: base_site.html
tomselect_filter/templates/admin/filters/: tomselect_filter.html
